--- a/_posts/2014-12-16-gumroad.md
+++ b/_posts/2014-12-16-gumroad.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title:  "New Payment experience with Gumroad"
+title:  "New Purchase experience with Gumroad"
 date:   2014-12-16 8:00:00
 categories: features
 author: aaronomullan
 ---
 
 
+<!-- more -->
+
+![Purchase UX]({{ site.url }}assets/2014-12-16-gumroad.png)
