Add titles in article

--- a/_posts/2014-12-16-gumroad.md
+++ b/_posts/2014-12-16-gumroad.md
@@ -10,3 +10,9 @@ author: aaronomullan
 <!-- more -->
 
 ![Purchase UX]({{ site.url }}assets/2014-12-16-gumroad.png)
+
+### A cleaner and simpler purchase experience
+
+### Readers don't need anymore to sign up to GitBook
+
+### Next: Distribution on 3rd party marketplaces
