Change "GumRoad" to "gumroad"

--- a/_posts/2014-12-16-gumroad.md
+++ b/_posts/2014-12-16-gumroad.md
@@ -6,13 +6,13 @@ categories: features
 author: aaronomullan
 ---
 
-GitBook is partnering with GumRoad to sell paid books.
+GitBook is partnering with Gumroad to sell paid books.
 
 <!-- more -->
 
 ![Purchase UX]({{ site.url }}assets/2014-12-16-gumroad.png)
 
-One of our big upcoming features is Marketplace distribution (with Google/Amazon/iBooks integration), and as part of this new strategy we've made the decision to phase out our own book purchase system in favor of GumRoad integration. All paid GitBooks are now automatically sold via GumRoad.
+One of our big upcoming features is Marketplace distribution (with Google/Amazon/iBooks integration), and as part of this new strategy we've made the decision to phase out our own book purchase system in favor of Gumroad integration. All paid GitBooks are now automatically sold via Gumroad.
 
 ### A cleaner and simpler purchase experience
 
