Add more example of queries

--- a/_posts/2014-12-21-search.md
+++ b/_posts/2014-12-21-search.md
@@ -29,7 +29,9 @@ You can now search using powerful filters. These filters let you:
 
 ### Mix filters
 
+* **Filter books by license and language:** [language:en license:apache-2](https://www.gitbook.com/search?q=language%3Aen+license%3Aapache-2)
 * **Filter books by a range of views:** [views:<200000 views:>90000](https://www.gitbook.com/search?q=views%3A%3C200000+views%3A%3E90000)
+* **Books in Chinese with more than 100,000 views:** [language:zh views:>100000](https://www.gitbook.com/search?q=language%3Azh+views%3A%3E100000)
 
 More information about the query syntax can be found in the [documentation](http://help.gitbook.io/platform/search.html).
 
