Refine search article

--- a/_posts/2014-12-21-search.md
+++ b/_posts/2014-12-21-search.md
@@ -6,13 +6,13 @@ categories: features
 author: samypesse
 ---
 
-Today we are annoucing a huge improvement on our search tools. We are now following the GitHub and Google search query syntax to filter results.
+Today we are annoucing a big improvement to our search service. We are now following GitHub and Google's search query syntax to empower you to run advanced queries and compose filters.
 
 <!-- more -->
 
 ![Search]({{ site.url }}assets/2014-12-21-search.png)
 
-You can now search using powerful filters. These filters let you:
+Here's a few examples of searches enabled by this new query system:
 
 ### Field equality Queries
 
@@ -35,4 +35,4 @@ You can now search using powerful filters. These filters let you:
 
 More information about the query syntax can be found in the [documentation](http://help.gitbook.io/platform/search.html).
 
-The parsing of search queries is done by a Node.js module that we open sourced on GitHub: [GitbookIO/filterable](https://github.com/GitbookIO/filterable).
+The parsing of queries is done by a `node.js` module that we've open sourced on GitHub: [GitbookIO/filterable](https://github.com/GitbookIO/filterable). (PRs are more than welcome).
