--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -6,9 +6,11 @@ categories: releases
 author: samypesse
 ---
 
-We just released the version `2.0.0` of [GitBook](https://github.com/GitbookIO/gitbook). This version includes many improvements and some sizeable changes.
+We just released the version `2.0.0-alpha` of **GitBook**. This version includes many improvements and some sizeable changes.
 
 <!-- more -->
+
+This version is a huge improvement for GitBook, it will be release as a stable version in the coming weeks. In the midtime you can already use it on GitBook and locally; and also be part of the [discussion on GitHub](https://github.com/GitbookIO/gitbook/pull/562).
 
 ### Template Engine
 
