Cleanup version 2.0.0 article

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Version 2.0.0: Content References, AsciiDoc, Plugins, ..."
+title:  "GitBook 2.0.0: Content References, AsciiDoc, Plugins, ..."
 date:   2015-02-05 14:32:00
 categories: releases
 author: samypesse
@@ -10,63 +10,63 @@ We just released the version `2.0.0-alpha` of **GitBook**. This version includes
 
 <!-- more -->
 
-This version is a huge improvement for GitBook, it will be release as a stable version in the coming weeks. In the midtime you can already use it on GitBook and locally; and also be part of the [discussion on GitHub](https://github.com/GitbookIO/gitbook/pull/562).
+This 2.0.0 release brings a huge set of improvements for GitBook, adding many requested features while also fixing a few bugs, it will slowly transition from alpha to stable over the coming weeks. In the meantime you can already use it on [GitBook.com](https://www.gitbook.com) and locally; you can be part of the [discussion on GitHub](https://github.com/GitbookIO/gitbook/pull/562).
 
 ### Template Engine
 
-The version 2.0.0 introduces a template engine before the markup parsers. This template engine is based on Nunjucks by Mozilla, the syntax is inspired by jinja2:
+This new release introduces a template engine processed before the markup parsers, it leverages Mozilla's [Nunjucks library](http://mozilla.github.io/nunjucks/) providing a simple syntax which can be extended by plugins ! Allowing for a whole new category of **block** based plugins. Here's an overview of what GitBook's processing pipeline now looks like :
 
 ![Process of GitBook 2.0.0]({{ site.url }}assets/2015-02-05-process.png)
 
 
-This template engine lets you use and include variables from your `book.json` configuration:
+This template engine allows you to inject variables from `book.json` configuration:
 
 ```
 This is my {{ book.myVariable }}.
 ```
 
-More informations about it are available on our [documentation](http://help.gitbook.com/format/templating.html).
+To learn more check out our [templating documentation](http://help.gitbook.com/format/templating.html).
 
 ### AsciiDoc, reStructuredText parsers
 
-Support for other markup language than Markdown was a highly requested feature. The version 2.0.0 removes the unique dependence to Markdown to bring support to AsciiDoc and reStructuredText; these two parsers are currently in alpha version and will be improved during the evolution of the 2.x.x version.
+Support for markup languages other than Markdown was a highly requested feature. The 2.0.0 release removes the unique dependence to Markdown to bring support to AsciiDoc and reStructuredText; these two parsers are currently in alpha and will be improved during the evolution of the 2.x.x release.
 
 ### Content References: Internal and External
 
-Authors really wanted to use "content references," or conrefs, when writing documentation. A conref allows you to write a chunk of text once and reuse it throughout the book. (The idea was borrowed from the DITA standard.)
+Authors, especially technical writers, really wanted to use "content references", also known as "conrefs", when writing documentation. A conref allows you to write a chunk of text once and reuse it throughout the book. (The idea was borrowed from the DITA standard).
 
 ```
 {% include ".myFile.md" %}
 ```
 
-It also supports include files from other git using a git reference:
+Not only can you include local blocks of content, but you can also import remotely, opening up endless new collaborative possibilities:
 
 ```
 {% include "git+https://github.com/GitbookIO/documentation.git/README.md#1.0.1" %}
 ```
 
-More informations about this feature are available on our [documentation](http://help.gitbook.com/format/conrefs.html).
+Check out [the documentation](http://help.gitbook.com/format/conrefs.html) to learn more.
 
 ### Plugins and Extending template syntax
 
-Plugins can now extend the templating syntax independly of the parsers (Markdown, AsciiDoc or reStructuredText). Plugins can extends both **filters** and **blocks**.
+Plugins can now extend the templating syntax independly of the parsers (Markdown, AsciiDoc or reStructuredText). Plugins can extend both **filters** and **blocks**.
 
-More informations about plugins can be found in the [documentation](http://help.gitbook.com/plugins/index.html).
+You can learn all about this new plugin feature in our [documentation](http://help.gitbook.com/plugins/index.html) !
 
-### Better support of images in eBook formats (SVG, ...)
+### Better support of images (SVG, ...) in eBook formats
 
-This releases handle in a much more betteer way images when converting the book to eBook (pdf, epub and mobi). Remote images are downloaded locally and integrated as local files during the build, and SVG images are converted to PNG automatically (Inline SVGs are also supported).
+GitBook 2.0.0 is a lot smarter when it comes to embeddeding images in eBooks (pdf, epub and mobi). Remote images are downloaded locally and integrated as local files during the build, and SVG images are rendered to PNGs automatically (Inline SVGs are also supported). This allows you to use cutting edge vector graphics (SVGs, ...) with the peace of mind that it will render beautifuly on the web, offline and on mobile !
 
 ### Math in eBook formats
 
-The [MathJax plugin](https://github.com/GitbookIO/plugin-mathjax) has been improved to support ebook formats. Mathematics in your book will be converted to SVG when using ebook formats (pdf, epub and mobi), then converted to PNG by GitBook itself.
+GitBook counts many mathematicians, researchers and students amongst it's users for whom formulas and equations are essential. So we're happy to announce that the [MathJax plugin](https://github.com/GitbookIO/plugin-mathjax) has been improved to support ebook formats. Math in your books will be converted to SVG then rendered to PNGs for eBooks (pdf, epub and mobi).
 
 ### How to test GitBook 2.x.x on GitBook.com
 
-Till the version 2.0.0 is not a stable release, you can test and check that your book is building correctly with it by switching the builder to `"Version 2.x.x"` in your book settings.
+Until the 2.0.0 release is a **stable** release, you can test it by switching the **"builder"** to `"Version 2.x.x"` in your book's settings.
 
 ### How to test GitBook 2.x.x locally
 
-GitBook is now using a [separated CLI](https://github.com/GitbookIO/gitbook-cli), this program will not depend on GitBook versions (only supported versions `>=2.0.0`).
+GitBook now uses a [separate CLI](https://github.com/GitbookIO/gitbook-cli), this program does not depend on GitBook versions (supporting versions `>=2.0.0`).
 
-You can install using: `npm install gitbook-cli -g`, note that you'll need to uninstall `gitbook` from yoru system before being able to install `gitbook-cli`.
+You can install it with: `npm install gitbook-cli -g`, note that you'll need to uninstall `gitbook` from your system before being able to install `gitbook-cli`.
