Add book settings directions

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -63,7 +63,7 @@ GitBook counts many mathematicians, researchers and students amongst it's users 
 
 ### How to test GitBook 2.x.x on GitBook.com
 
-Until the 2.0.0 release is a **stable** release, you can test it by switching the **"builder"** to `"Version 2.x.x"` in your book's settings.
+Until the 2.0.0 release is a **stable** release, you can test it by switching the **"builder"** to `"Version 2.x.x"` in your book's settings. (`Book Settings > Options > Publication`).
 
 ### How to test GitBook 2.x.x locally
 
