Add v2 image at top

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -10,6 +10,8 @@ We just released the version `2.0.0-alpha` of **GitBook**. This version includes
 
 <!-- more -->
 
+![GitBook v2.0.0]({{ site.url }}assets/2015-02-05-gitbook-v2.jpg)
+
 This 2.0.0 release brings a huge set of improvements for GitBook, adding many requested features while also fixing a few bugs, it will slowly transition from alpha to stable over the coming weeks. In the meantime you can already use it on [GitBook.com](https://www.gitbook.com) and locally; you can be part of the [discussion on GitHub](https://github.com/GitbookIO/gitbook/pull/562).
 
 ### Template Engine
