Fix v2 article, use "raw" blocks

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -38,13 +38,13 @@ Support for markup languages other than Markdown was a highly requested feature.
 Authors, especially technical writers, really wanted to use "content references", also known as "conrefs", when writing documentation. A conref allows you to write a chunk of text once and reuse it throughout the book. (The idea was borrowed from the DITA standard).
 
 ```
-{% include ".myFile.md" %}
+{% raw %}{% include ".myFile.md" %}{% endraw %}
 ```
 
 Not only can you include local blocks of content, but you can also import remotely, opening up endless new collaborative possibilities:
 
 ```
-{% include "git+https://github.com/GitbookIO/documentation.git/README.md#1.0.1" %}
+{% raw %}{% include "git+https://github.com/GitbookIO/documentation.git/README.md#1.0.1" %}{% endraw %}
 ```
 
 Check out [the documentation](http://help.gitbook.com/format/conrefs.html) to learn more.
