Reword first sentence of v2 article

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -6,7 +6,7 @@ categories: releases
 author: samypesse
 ---
 
-We just released the version `2.0.0-alpha` of **GitBook**. This version includes many improvements and some sizeable changes.
+We just released the version `2.0.0-alpha` of **GitBook**. This version includes many changes and some exciting improvements !
 
 <!-- more -->
 
