Escape variable code in v2 article

--- a/_posts/2015-02-05-version-2-0-0.md
+++ b/_posts/2015-02-05-version-2-0-0.md
@@ -24,7 +24,7 @@ This new release introduces a template engine processed before the markup parser
 This template engine allows you to inject variables from `book.json` configuration:
 
 ```
-This is my {{ book.myVariable }}.
+This is my {% raw %}{{ book.myVariable }}{% endraw %}.
 ```
 
 To learn more check out our [templating documentation](http://help.gitbook.com/format/templating.html).
