--- a/_posts/2015-03-12-version-2-0-0-beta.md
+++ b/_posts/2015-03-12-version-2-0-0-beta.md
@@ -6,17 +6,20 @@ categories: releases
 author: samypesse
 ---
 
-GitBook 2.0.0 will very soon become the stable version. This version includes many changes and some exciting improvements !
+GitBook 2.0.0 is maturing, transitioning from `alpha` to `beta` and will soon become the new stable. Featuring large improvements, bug fixes and a fair share of shiny new features !
 
 <!-- more -->
 
-A month ago, we released the alpha version of GitBook 2.0.0, this version bringed many changes and improvements such as: [Content references](http://help.gitbook.com/format/conrefs.html), [Templating](http://help.gitbook.com/format/templating.html), [Support for AsciiDoc](http://help.gitbook.com/format/asciidoc.html), Internalization of the webreader, etc.
+A month ago, the `alpha` release introduced new features and improvements such as: [Content references](http://help.gitbook.com/format/conrefs.html), [Templating](http://help.gitbook.com/format/templating.html), [AsciiDoc Support](http://help.gitbook.com/format/asciidoc.html), better Internalization support (thanks to translations contributed by the community !) and others ...
 
-You can read a summary of what's new in GitBook 2.0.0 in your precedent [blog article](https://www.gitbook.com/blog/releases/version-2-0-0), or access the complete [ChangeLog on GitHub](https://github.com/GitbookIO/gitbook/blob/master/CHANGES.md).
+Our [previous blog article](https://www.gitbook.com/blog/releases/version-2-0-0) discussed the big changes coming with the `2.0.0` release, check it out or the [ChangeLog on GitHub](https://github.com/GitbookIO/gitbook/blob/master/CHANGES.md) for a deeper understanding of the specifc changes to come.
 
-Today we are releasing the beta of GitBook 2.0.0, more stable and almost ready to become the stable version. GitBook.com will use GitBook 2.0.0 as unique and default builder starting **March 18**.
+Today we're releasing GitBook `2.0.0` as `beta` release, improving quality, stability and performance over the `alpha`, we're not far from it becoming `stable`. In fact, GitBook.com will switch to GitBook `2.0.0` as the default builder starting **March 18**.
 
-In the mid-time, while most books should no be affect, We encourage you to test your books with GitBook 2.0.0 on gitbook.com by switching the builder in the book settings:
+Most books, if not all, will benefit of the `2.0.0.` release without any breaking changes. If you want to check for any breaking changes or take the `2.0.0` release for a spin: simply switch the builder in the your book's settings:
 
 ![Setup buidler 2.0.0]({{ site.url }}assets/2015-03-1-builder-2.png)
 
+I hope you will appreciate the hard work that's gone into GitBook `2.0.0`, made possible thanks to the great feedback and input provided by our authors.
+
+We'll keep you updated, in the meantime good luck with your GitBook !
