Add section about our APIs

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -16,4 +16,14 @@ GitBook is sponsoring the Codex Hackathon that will take place on June 26-28 in 
 
 It will take place on June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Parisoma.
 
+### Hack with our APIs
 
+Our APIs include:
+
+* **REST API** to create/update/manage books on our platform
+* **OPDS feed** and search/explore API that covers over 7,000 books published on our platform
+* **Rousseau REST API** to proofread and spellcheck
+
+### One invitation for a GitBook author
+
+We'll select one author/developer of GitBook that will be invited to San Francisco to participe to the hackathon.
