Add explanation on how to be selected

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -18,7 +18,7 @@ It will take place on June 26-28 in San Francisco, the opening reception will be
 
 ### Hack with our APIs
 
-Our APIs include:
+Codex will be the perfect opportunity to learn more about our APIs, including:
 
 * **REST API** to create/update/manage books on our platform
 * **OPDS feed** and search/explore API that covers over 7,000 books published on our platform
@@ -27,3 +27,5 @@ Our APIs include:
 ### One invitation for a GitBook author
 
 We'll select one author/developer of GitBook that will be invited to San Francisco to participe to the hackathon.
+
+**How to be selected**: Post on Twitter an idea for the hackathon, mention `@GitbookIO` in your tweet.
