Add more explanation

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -6,7 +6,7 @@ categories: infos
 author: samypesse
 ---
 
-GitBook is sponsoring the Codex Hackathon that will take place on June 26-28 in San Francisco.
+GitBook is sponsoring the Codex Hackathon that will take place on June 26-28 in San Francisco. One invitation offered with trip coverage.
 
 <!-- more -->
 
@@ -14,11 +14,13 @@ GitBook is sponsoring the Codex Hackathon that will take place on June 26-28 in 
 
 [Codex Hackathon](http://codexhackathon.com/) is a gathering of folks who want to imagine the future of books and reading. Programmers, designers, writers, librarians, publishers, readers.  All are welcome.
 
+The CODEX theme is be "connecting" — connecting around books, connecting readers and authors, connecting libraries.
+
 It will take place on June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Parisoma.
 
 ### Hack with our APIs
 
-Codex will be the perfect opportunity to learn more about our APIs, including:
+Codex will be the perfect opportunity to learn more about our APIs, and start hacking great applications on top of them. Our APIs include:
 
 * **REST API** to create/update/manage books on our platform
 * **OPDS feed** and search/explore API that covers over 7,000 books published on our platform
@@ -28,4 +30,11 @@ Codex will be the perfect opportunity to learn more about our APIs, including:
 
 We'll select one author/developer of GitBook that will be invited to San Francisco to participe to the hackathon.
 
-**How to be selected**: Post on Twitter an idea for the hackathon, mention `@GitbookIO` in your tweet.
+**How to be selected**: Post on Twitter an idea for the hackathon, mention `@GitbookIO` and `#codex` in your tweet.
+
+For example:
+
+> Application to write books from an Apple Watch to publish on @GitbookIO #codex
+
+We'll announce the winner on June 8. We will cover his/her trip with on a limit $1200.
+
