Rewrite/reword codex article

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -1,40 +1,46 @@
 ---
 layout: post
-title:  "Join us at the Codex Hackathon"
+title:  "Join us at the CODEX Hackathon"
 date:   2015-05-29 14:32:00
 categories: infos
-author: samypesse
+author: aaronomullan
 ---
 
-GitBook is sponsoring the Codex Hackathon that will take place on June 26-28 in San Francisco. One invitation offered with trip coverage.
+GitBook is sponsoring the CODEX Hackathon, a unique opportunity to imagine the future of books and we're inviting one of you to join us !
 
 <!-- more -->
 
-![Codex Logo]({{ site.url }}assets/2015-05-29-codex.png)
+![CODEX Logo]({{ site.url }}assets/2015-05-29-codex.png)
 
-[Codex Hackathon](http://codexhackathon.com/) is a gathering of folks who want to imagine the future of books and reading. Programmers, designers, writers, librarians, publishers, readers.  All are welcome.
+[CODEX Hackathon](http://codexhackathon.com/) is a gathering of folks who want to imagine the future of books and reading. Programmers, designers, writers, librarians, publishers, readers. All are welcome.
 
-The CODEX theme is be "connecting" — connecting around books, connecting readers and authors, connecting libraries.
+The CODEX theme is "connecting" — connecting around books, connecting readers and authors, connecting libraries.
 
-It will take place on June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Parisoma.
+It will take place over the weekend of June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Parisoma.
 
 ### Hack with our APIs
 
-Codex will be the perfect opportunity to learn more about our APIs, and start hacking great applications on top of them. Our APIs include:
+The CODEX Hackaton is a great opportunity to learn more about our APIs, and to build great applications on top of them together. Our APIs include:
 
 * **REST API** to create/update/manage books on our platform
 * **OPDS feed** and search/explore API that covers over 7,000 books published on our platform
+* **GitBook plugins** and our open source book format/toolchain
 * **Rousseau REST API** to proofread and spellcheck
 
-### One invitation for a GitBook author
+### Join us at CODEX
 
-We'll select one author/developer of GitBook that will be invited to San Francisco to participe to the hackathon.
+If you're a developer, a designer or simply passionate about books, join us at CODEX for a weekend full of code, fun and innovation, you can [register here](http://codexhackathon.com/).
 
-**How to be selected**: Post on Twitter an idea for the hackathon, mention `@GitbookIO` and `#codex` in your tweet.
+We are lucky to have a great international community and we know travelling can be expensive so we're offering the chance to win one trip to San Francisco (and the Codex Hackathon of course) and we'll cover your travel expenses (up to $1200).
 
-For example:
+**How to be participate**: Tweet an idea that you would like to build/explore during the hackathon, mention `@GitbookIO` and `#codex` in your tweet.
 
-> Application to write books from an Apple Watch to publish on @GitbookIO #codex
+**The winner** will be chosen amongst the best/craziest ideas!
 
-We'll announce the winner on June 8. We will cover his/her trip with on a limit $1200.
+For example (the killer app Apple Watch has been waiting for):
 
+> An app to write and publish books from your Apple Watch through @GitbookIO #codex
+
+We'll announce the lucky winner on the 8th of June, so we wish you all the best of luck brainstorming and tweeting !
+
+We look forward to seeing you there !
