Change hackathon address

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -16,7 +16,7 @@ GitBook is sponsoring the CODEX Hackathon, a unique opportunity to imagine the f
 
 The CODEX theme is "connecting" — connecting around books, connecting readers and authors, connecting libraries.
 
-It will take place over the weekend of June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Parisoma.
+It will take place over the weekend of June 26-28 in San Francisco, the opening reception will be at the GitHub HQ and the hackathon at Code for America.
 
 ### Hack with our APIs
 
