Use smaller codex image

--- a/_posts/2015-05-28-codex.md
+++ b/_posts/2015-05-28-codex.md
@@ -10,7 +10,7 @@ GitBook is sponsoring the CODEX Hackathon, a unique opportunity to imagine the f
 
 <!-- more -->
 
-![CODEX Logo]({{ site.url }}assets/2015-05-29-codex.png)
+![CODEX Logo]({{ site.url }}assets/2015-05-29-codex.jpg)
 
 [CODEX Hackathon](http://codexhackathon.com/) is a gathering of folks who want to imagine the future of books and reading. Programmers, designers, writers, librarians, publishers, readers. All are welcome.
 
