Add screenshots in article

--- a/_posts/2015-10-01-editor-4.1.0.md
+++ b/_posts/2015-10-01-editor-4.1.0.md
@@ -10,10 +10,23 @@ We are releasing version 4.1.0 of the desktop and web editor.
 
 <!-- more -->
 
-
 ### TeX highlighting in editor
 
+Science paper is an important usecase of GitBook, this editor release makes it easier to write math, TeX syntax delimited by `$$...$$` will now be correctly highlighted in the editor.
+
+![Math in editor]({{ site.url }}assets/2015-10-01-editor-math.png)
+
 ### Keyboard shortcuts customization
+
+Keyboard shortcuts makes it faster to write and format your text, this release brings customization to the shortcuts. You can record your own shortcuts in the editor settings.
+
+![Record keyboard shortcuts]({{ site.url }}assets/2015-10-01-editor-keyboard.png)
+
+### Context menu to format text
+
+The context menu makes it easier to format your Markdown/AsciiDoc text, left click and select the format!
+
+![Context menu]({{ site.url }}assets/2015-10-01-editor-menu.png)
 
 ### Bug fixes and improvements
 
