Add intro about download

--- a/_posts/2015-10-01-editor-4.1.0.md
+++ b/_posts/2015-10-01-editor-4.1.0.md
@@ -10,6 +10,8 @@ We are releasing version 4.1.0 of the desktop and web editor.
 
 <!-- more -->
 
+This new release is accessible throught the auto-updater on Windows and Mac; and downloadable at [gitbook.com/editor](https://www.gitbook.com/editor) for Linux. The web editor on GitBook.com has also been updated with this latest release.
+
 ### TeX highlighting in editor
 
 Science paper is an important usecase of GitBook, this editor release makes it easier to write math, TeX syntax delimited by `$$...$$` will now be correctly highlighted in the editor.
