--- a/_posts/2015-11-06-slack.md
+++ b/_posts/2015-11-06-slack.md
@@ -18,6 +18,4 @@ Webhooks are now available for books on GitBook.com.
 
 Along with Webhooks, we are also releasing our first integration: **Slack**.
 
-This Slack integration will post updates and overall activity to a channel of your choosing in Slack.
-
-It is open source, feel free to contribute on GitHub: [github.com/GitbookIO/services-slack](https://github.com/GitbookIO/services-slack).
+This Slack integration will post updates and overall activity to a channel of your choosing in Slack. Instructions on how to install and use this integration can be found in the GitHub repository: [GitbookIO/services-slack](https://github.com/GitbookIO/services-slack).
