Improve text about slack

--- a/_posts/2015-11-09-slack.md
+++ b/_posts/2015-11-09-slack.md
@@ -20,10 +20,10 @@ Once you've configured a hook, we'll deliver an HTTP POST with a descriptive pay
 
 ### Slack Integration
 
-Along with Webhooks, we are also releasing our first integration: **Slack**.
+Along with Webhooks, we are also releasing our first integration, with **Slack**.
 
 ![Slack integration]({{ site.url }}assets/2015-11-09-slack.png)
 
-This Slack integration will post updates and overall activity to a channel of your choosing in Slack. Instructions on how to install and use this integration can be found in the GitHub repository: [GitbookIO/services-slack](https://github.com/GitbookIO/services-slack).
+The Slack integration will post updates and overall activity to a channel of your choosing in Slack. Instructions on how to install and use this integration can be found in the GitHub repository: [GitbookIO/services-slack](https://github.com/GitbookIO/services-slack).
 
 This integration is also open source, and is a good example of how to build integrations with GitBook.com.
