--- a/_posts/2015-11-09-slack.md
+++ b/_posts/2015-11-09-slack.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "Webhooks and Slack integration"
+title:  "Webhooks: Slack + GitBook = ♥"
 date:   2015-11-09 3:32:00
 categories: features
 author: samypesse
 ---
 
-Today, we’re excited to announce Webhooks. It comes with a rich feature set providing developers the necessary tools to build integrations.
+Today we’re excited to release Webhooks. A simple but powerful way for developers to extend GitBook.com!
 
 <!-- more -->
 
@@ -16,14 +16,18 @@ Webhooks are an easy way to send information from one app to another. Starting t
 
 ![Webhooks dashboard]({{ site.url }}assets/2015-11-09-webhooks.png)
 
-Once you've configured a hook, we'll deliver an HTTP POST with a descriptive payload for each subscribed events. The deliveries section helps you track and troubleshoot a webhook event payload.
+Once you've added a webhook, `GitBook.com` will deliver a payload over a HTTP POST, for each subscribed event. The "deliveries" panel helps you track and troubleshoot webhook payloads.
 
 ### Slack Integration
 
-Along with Webhooks, we are also releasing our first integration, with **Slack**.
+Along with Webhooks we are releasing our first integration: **Slack**.
 
 ![Slack integration]({{ site.url }}assets/2015-11-09-slack.png)
 
-The Slack integration will post updates and overall activity to a channel of your choosing in Slack. Instructions on how to install and use this integration can be found in the GitHub repository: [GitbookIO/services-slack](https://github.com/GitbookIO/services-slack).
+Our Slack integration posts updates and your book's overall activity to a channel of your choice. Instructions on how to install and use this integration can be found in the GitHub repository: [GitbookIO/services-slack](https://github.com/GitbookIO/services-slack). Pull requests and feedback are welcome !
 
-This integration is also open source, and is a good example of how to build integrations with GitBook.com.
+### Build your own gitbook service
+
+You might already have a few ideas of cool features that could be built with WebHooks! WebHooks are simple but incredibly flexible you could build anything from a serialized publishing mailing list to a gitbook linter (that highlights stylistic regressions) or pretty much anything else !
+
+If you feel inspired, take a look at the slack integration and get coding :)
