Add base listing of reviews 2015

--- a/_posts/2016-01-08-2015-year-review.md
+++ b/_posts/2016-01-08-2015-year-review.md
@@ -7,3 +7,14 @@ author: samypesse
 ---
 
 <!-- more -->
+
+As [expected](https://www.gitbook.com/blog/infos/year-review), 2015 has been a busy but incredible year for GitBook, we've grown to a community of ~100,000 authors
+
+### 2015 in Review
+
+* **GitBook Format/Toolchain** : We released the version 2.0 of the format, much more [extensible](https://plugins.gitbook.com)
+* **GitBook Editor** : We release a new **GitBook Editor** for Web Browser, Windows, Linux and Mac; [we are working hard](https://www.gitbook.com/blog/releases/editor-5-beta) on making the editor a pleasure to use.
+
+### 2016 Preview
+
+
