Adding some features

--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -19,6 +19,12 @@ This is the core feature of the new Editor. We have been working hard to remove 
 
 ![WYSIWYM]({{ site.url }}assets/)
 
+### Smarter
+
+#### References auto-completion
+
+#### Automatic files management
+
 
 ### Support for GitBook v3
 
@@ -26,9 +32,11 @@ This is the core feature of the new Editor. We have been working hard to remove 
 
 #### Parts
 
-####
+#### Theming
+
 
 ### Improved stability and performances
+
 
 
 ### How to get it
