Links auto-completion

--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -17,11 +17,15 @@ This is the core feature of the new Editor. We have been working hard to remove 
 
 ...
 
-![WYSIWYM]({{ site.url }}assets/)
+![WYSIWYM Screenshot]({{ site.url }}assets/)
 
 ### Smarter
 
-#### References auto-completion
+#### Links auto-completion
+
+How tiring it is to type the paths to files when creating summary entries or links. No more! With the new auto-completion, you can swiftly link to files, or articles of your book.
+
+![Auto-completion Screenshot]({{ site.url }}assets/)
 
 #### Automatic files management
 
