--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -17,18 +17,21 @@ This is the core feature of the new Editor. We have been working hard to remove 
 
 ...
 
-![WYSIWYM Screenshot]({{ site.url }}assets/)
+![Screenshot: WYSIWYM]({{ site.url }}assets/)
 
 ### Smarter
 
 #### Links auto-completion
 
-How tiring it is to type the paths to files when creating summary entries or links. No more! With the new auto-completion, you can swiftly link to files, or articles of your book.
+How tiring it was to type the paths to files when creating summary entries or links. Now it is so smooth. Thanks to auto-completion, you can swiftly link to files, or articles in your book.
 
-![Auto-completion Screenshot]({{ site.url }}assets/)
+![Screenshot: Auto-completion]({{ site.url }}assets/)
 
 #### Automatic files management
 
+We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the files tree from the menu, but it should rarely be necessary.
+
+![Files tree menu button]({{ site.url }}assets/)
 
 ### Support for GitBook v3
 
