--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -41,9 +41,9 @@ We made our best to spare you from managing the book's files yourself. Now you c
 
 #### Theming
 
+#### Improved stability and performances
 
-### Improved stability and performances
-
+The `gitbook` library itself was integrated to the new Editor, and is used to parse files and generate previews. This has led to better performances overall, less bugs, and less difference between what you see in the Editor and what is published on GitBook.com in the end.
 
 
 ### How to get it
