--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -37,6 +37,10 @@ We made our best to spare you from managing the book's files yourself. Now you c
 
 #### Anchor links
 
+You can now make links pointing to some heading of your page. They are called anchor links. You can use them in Markdown `\(Some anchor link\)\[file.md#name-of-the-heading\]`. Or you can let the Editor suggest them for the current article:
+
+![Screenshot: Anchor link suggestion]({{ site.url }}assets/)
+
 #### Parts
 
 #### Theming
