--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -47,6 +47,10 @@ You can now make links pointing to some heading of your page. They are called an
 
 #### Theming
 
+GitBook v3 introduced themes for books. Some of them, like the [theme FAQ](https://plugins.gitbook.com/plugin/theme-faq), rely on features only supported in the new Editor.
+
+![Screenshot: Theme FAQ]({{ site.url }}assets/)
+
 #### Improved stability and performances
 
 The `gitbook` library itself was integrated to the new Editor, and is used to parse files and generate previews. This has led to better performances overall, less bugs, and less difference between what you see in the Editor and what is published on GitBook.com in the end.
