--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -55,9 +55,8 @@ GitBook v3 introduced themes for books. Some of them, like the [theme FAQ](https
 
 The `gitbook` library itself was integrated to the new Editor, and is used to parse files and generate previews. This has led to better performances overall, less bugs, and less difference between what you see in the Editor and what is published on GitBook.com in the end.
 
+### How to get it?
 
-### How to get it
-
-You can grab the new release through the auto-updater on Windows and Mac; or download it at [gitbook.com/editor](https://www.gitbook.com/editor) for Linux. The Web version is already live on GitBook.com.
+You can grab the new release through the auto-updater on Windows and Mac; or [download it](https://www.gitbook.com/editor) for Linux. The Web version is already live on GitBook.com.
 
 Thanks for your continued feedback and support ! Let us know what you would like to see in the next release !
