--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -31,7 +31,7 @@ How tiring it was to type the paths to files when creating summary entries or li
 
 We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the files tree from the menu, but it should rarely be necessary.
 
-![Files tree menu button]({{ site.url }}assets/)
+![Screenshot: Files tree menu button]({{ site.url }}assets/)
 
 ### Support for GitBook v3
 
@@ -44,6 +44,10 @@ You can now make links pointing to some heading of your page. They are called an
 ![Screenshot: Anchor link suggestion]({{ site.url }}assets/)
 
 #### Parts
+
+You can create parts to organize your articles. Parts serve to divide your articles into high-level groups
+
+![Screenshot: Parts]({{ site.url }}assets/)
 
 #### Theming
 
