--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -13,9 +13,7 @@ Our focus was to improve productivity and overall stability.
 
 ### What you see, is what you mean
 
-This is the core feature of the new Editor. We have been working hard to remove the preview and make editing documents seamless and beautiful.
-
-...
+This is the core feature of the new Editor. We have been working hard to remove the preview and make editing documents seamless and beautiful. You do not have to see the Markdown syntax anymore. Documents are displayed to reflect what any writer should focus on: the structure and content.
 
 ![Screenshot: WYSIWYM]({{ site.url }}assets/)
 
@@ -63,4 +61,4 @@ The `gitbook` library itself was integrated to the new Editor, and is used to pa
 
 You can grab the new release through the auto-updater on Windows and Mac; or [download it](https://www.gitbook.com/editor) for Linux. The Web version is already live on GitBook.com.
 
-Thanks for your continued feedback and support ! Let us know what you would like to see in the next release !
+Thanks for your continued feedback and support! Let us know what you would like to see in the next release!
