--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -61,4 +61,4 @@ The `gitbook` library itself was integrated to the new Editor, and is used to pa
 
 You can grab the new release through the auto-updater on Windows and Mac; or [download it](https://www.gitbook.com/editor) for Linux. The Web version is already live on GitBook.com.
 
-Thanks for your continued feedback and support! Let us know what you would like to see in the next release!
+Thanks for your continued [feedback](https://github.com/GitbookIO/feedback/issues) and support!
