Samy's input: simplify

--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -17,43 +17,21 @@ This is the core feature of the new Editor. We have been working hard to remove 
 
 ### Smarter
 
-#### Links auto-completion
+##### Links auto-completion
 
-How tiring it was to type the paths to files when creating summary entries or links. Now it is so smooth. Thanks to auto-completion, you can swiftly link to files, or articles in your book.
+How tiring it was to type the paths to files when editing a link or the table of contents. Thanks to auto-completion, you can now swiftly reference files and articles in your book.
 
 ![Screenshot: Auto-completion]({{ site.url }}assets/)
 
-#### Automatic files management
+##### Automatic files management
 
-We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the files tree from the menu, but it should rarely be necessary.
+We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the files tree from the menu, if ever it is necessary.
 
 ![Screenshot: Files tree menu button]({{ site.url }}assets/)
 
-### Support for GitBook v3
+### Stability, performances
 
-For those of you who did not know yet, the GitBook format progressed to version 3 recently, bringing along some cool new features. The new Editor will allow you to make use of them!
-
-#### Anchor links
-
-You can now make links pointing to some heading of your page. They are called anchor links. You can use them in Markdown `\(Some anchor link\)\[file.md#name-of-the-heading\]`. Or you can let the Editor suggest them for the current article:
-
-![Screenshot: Anchor link suggestion]({{ site.url }}assets/)
-
-#### Parts
-
-You can create parts to organize your articles. Parts serve to divide your articles into high-level groups
-
-![Screenshot: Parts]({{ site.url }}assets/)
-
-#### Theming
-
-GitBook v3 introduced themes for books. Some of them, like the [theme FAQ](https://plugins.gitbook.com/plugin/theme-faq), rely on features only supported in the new Editor.
-
-![Screenshot: Theme FAQ]({{ site.url }}assets/)
-
-#### Improved stability and performances
-
-The `gitbook` library itself was integrated to the new Editor, and is used to parse files and generate previews. This has led to better performances overall, less bugs, and less difference between what you see in the Editor and what is published on GitBook.com in the end.
+We put a lot of work into improving performances, reducing bug occurrences, and closing the gap between what you see in the Editor and what is published on GitBook.com.
 
 ### How to get it?
 
