Add image for wysiwym

--- a/_posts/2016-07-12-editor-6.md
+++ b/_posts/2016-07-12-editor-6.md
@@ -13,7 +13,7 @@ We are delighted to release version 6 of the GitBook Editor today!
 
 This is the core feature of the new Editor. We have been working hard to remove the preview and make editing documents seamless and beautiful. You do not have to see the Markdown syntax anymore. Documents are displayed to reflect what any writer should focus on: the structure and content.
 
-![Screenshot: WYSIWYM]({{ site.url }}assets/)
+![Screenshot: WYSIWYM]({{ site.url }}assets/2016-07-12-editor-wysiwym.png)
 
 ### Smarter
 
@@ -25,7 +25,7 @@ How tiring it was to type the paths to files when editing a link or the table of
 
 ##### Automatic files management
 
-We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the files tree from the menu, if ever it is necessary.
+We made our best to spare you from managing the book's files yourself. Now you can forget about files and focus on your content. Files are created automatically as you create articles and images are organised into an `assets` folder. You can still browse the book's files from the menu, if ever it is necessary.
 
 ![Screenshot: Files tree menu button]({{ site.url }}assets/)
 
